--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -24,11 +24,8 @@
         />
         <link rel="manifest" href="%PUBLIC_URL%/site.webmanifest" />
 
-        <meta
-            name="description"
-            content="Web site created using create-react-app"
-        />
-        <title>Scribble</title>
+        <meta name="description" content="Clone of skribbl.io but in ReactJS" />
+        <title>scribble - Multiplayer Drawing Game</title>
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
